# rc-bootcamp

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
src/: 01_python_basics.ipynb  02_numpy_basics.ipynb  03_esn_basics.ipynb  04_esn_fine_tuning.ipynb  05_esn_dynamics.ipynb  06_memory_capacity.ipynb  07_information_processing_capacity.ipynb  08_closed_loop_control.ipynb  09_internal_optimization.ipynb  10_bifurcation_embedding.ipynb  11_state_space_model.ipynb  README.ipynb
src/data/01_python_basics/: 00_01.py  00_02.py  01_01.py  01_02.py  01_03.py  01_04.py  01_05.py  02_01.py  02_02.py  02_03.py  02_04.py  02_05.py  03_01.py  03_02.py  03_03.py  03_04.py  03_05.py  04_01.py  04_02.py  04_03.py  04_04.py  04_05.py  04_06.py  04_07.py  04_08.py  04_09.py  04_10.py  05_01.py  05_02.py  05_03.py  05_04.py  05_05.py  06_01.py  06_02.py  06_03.py  06_04.py  06_05.py  07_01.py  07_02.py  07_03.py  (+2 more)
src/data/02_numpy_basics/: 01_01.py  01_02.py  01_03.py  01_04.py  01_05.py  01_06.py  01_07.py  01_08.py  01_09.py  01_10.py  02_01.py  02_02.py  02_03.py  02_04.py  02_05.py  03_01.py  03_02.py  03_03.py  03_04.py  03_05.py  04_01.py  04_02.py  04_03.py  04_04.py  04_05.py  05_01.py  05_02.py  05_03.py  05_04.py  05_05.py
src/data/03_esn_basics/: 01_01.py  01_02.py  03_01.py  04_01.py  05_01.py
src/data/04_esn_fine_tuning/: 01_01.py  01_02.py  01_03.py  02_01.py  03_02.py  03_03.py  05_01.py  05_02.py  06_01.py  06_02.py
src/data/05_esn_dynamics/: 01_01.py  01_02.py  01_03.py  02_01.py  03_01.py  03_02.py  03_03.py  03_04.py  03_05.py  04_01.py  04_02.py
src/ipc_module/: config.py  helper.py  polynomial.py  profiler.py  regressor.py  tqdm.py
src/utils/: chaos.py  figure.py  interface.py  interpolate.py  magic.py  reservoir.py  style_config.py  task.py  tester.py  tqdm.py  viewer.py
tool/: build.py  check_and_fix_notebook.py  requirements.txt
(+28 files in other folders)
